[package]
name = "mra-rs"
description = "A stupidly simple mail retrieval agent"
authors = ["Alexander Baron <alexander@baron-online.eu>"]
license = "MIT"
repository = "https://github.com/Schwefelhexa/mra-rs"
homepage = "https://github.com/Schwefelhexa/mra-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
confique = "0.2.5"
getset = "0.1.2"
imap = "2.4.1"
itertools = "0.12.1"
maildir = "0.6.4"
native-tls = "0.2.11"
serde = { version = "1.0.196", features = ["derive"] }
shellexpand = "3.1.0"
